--- a/style.css
+++ b/style.css
@@ -1,5 +1,45 @@
-/*body{
-	background-color: #dcdce2;
+body{
+		background-color: #25274d;
+	}
+	.contact{
+		padding: 4%;
+		height: 400px;
+	}
+	.col-md-3{
+		background: #ff9b00;
+		padding: 4%;
+		border-top-left-radius: 0.3rem;
+		border-bottom-left-radius: 0.3rem;
+	}
+	.contact-info{
+		margin-top:10%;
+	}
+	.contact-info img{
+		margin-bottom: 15%;
+	}
+	.contact-info h2{
+		margin-bottom: 10%;
+	}
+	.col-md-9{
+		background: #fff;
+		padding: 3%;
+		border-top-right-radius: 0.3rem;
+		border-bottom-right-radius: 0.3rem;
+	}
+	.contact-form label{
+		font-weight:600;
+	}
+	.contact-form button{
+		background: #25274d;
+		color: #fff;
+		font-weight: 600;
+		width: 25%;
+	}
+	.contact-form button:focus{
+		box-shadow:none;
+	}
+.row{
+	padding-top: 57px;
 }
 
 .nav-item{
@@ -19,6 +59,11 @@
 .nav-item a:hover {
   background-color: #1f193e;
   color: white;
-  }
-*/
- 
+ }
+
+/* CSS CODE */
+
+
+
+
+
