--- a/Contact Me.css
+++ b/Contact Me.css
@@ -53,9 +53,12 @@
 }
 
 .nav-item a:hover {
-  color: white;
+  color: black;
  }
 
+  .dropdown-item:hover{
+ 	background-color: #ebf0f3;
+ }
 
 
 
